# bookfairy-audiobook-YAML

./: .env.example  .gitignore  .pre-commit-config.yaml  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  simple_demo.py
.claude/: settings.local.json
scripts/: governance-report.py  health-check.py  integration_test.py  orchestrate.py
services/audiobookshelf/: service.py
services/discord-bot/: bot.py
services/lazylibrarian/: service.py
services/prowlarr/: service.py
services/qbittorrent/: service.py
services/redis/: service.py
services/shared/models/: compliance.py  config.py  container.py  governance.py  health.py  risks.py  rubric.py  service_map.py  user_request.py  validation.py  workflow.py
tests/contract/: test_discord_download.py  test_discord_process.py  test_discord_recommend.py  test_discord_search.py  test_governance_audit.py  test_governance_risk.py  test_governance_validation.py  test_health_api.py  test_health_detailed.py  test_health_ready.py  test_workflow_status.py
tests/integration/: test_ai_recommendations.py  test_audiobook_workflow.py  test_audit_lens.py  test_failure_recovery.py  test_performance.py  test_risk_management.py  test_service_deployment.py  test_termination_criteria.py  test_validation_protocol.py
